# Tauri_TCP_Pratice

./: package-lock.json  package.json  pnpm-lock.yaml
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  tcp_client.rs
src/compoments/: LabTab.css  LabTabs.jsx
src/dev/: previews.jsx
src/pages/: Config.css  Config.jsx  NetWorkClient.css  NetWorkClient.jsx  TableSeries.jsx
